// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-1bnlhxy-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div>
              <input
                className="css-olg5us-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-1bnlhxy-TextField"
        >
          <div
            className="css-1wk1ksn-TextField"
          >
            <div>
              <input
                className="css-ytxe85-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-az9teu-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div>
              <input
                className="css-olg5us-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-1bnlhxy-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div>
              <input
                className="css-olg5us-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-10s4xgi-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div>
              <input
                className="css-olg5us-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="css-12qr1pz-TextField"
        >
          <div
            className="css-az9teu-TextField"
          >
            <div
              className="css-190bw9v-TextField"
            >
              <div
                className="css-irhnnw-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1k5aruc-Icon"
                  />
                </span>
              </div>
              <div>
                <input
                  className="css-olg5us-TextField"
                  disabled={false}
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="css-u3om98-Label"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-1bnlhxy-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div>
              <input
                className="css-olg5us-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-1bnlhxy-TextField"
        >
          <div
            className="css-1h6srny-TextField"
          >
            <div>
              <input
                className="css-1snl48k-TextField"
                placeholder="Label "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-1bnlhxy-TextField"
        >
          <div
            className="css-1h6srny-TextField"
          >
            <div>
              <input
                className="css-1tyxk0w-TextField"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Placeholder, icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-1bnlhxy-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div
              className="css-irhnnw-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div>
              <input
                className="css-olg5us-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-1bnlhxy-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div>
              <input
                className="css-olg5us-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-1096dwj-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-1bnlhxy-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div
              className="css-9rjp3g-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div>
              <input
                className="css-olg5us-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-9rjp3g-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-tg6fkf-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div>
              <input
                className="css-olg5us-TextField"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-o26s2u-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div>
              <input
                className="css-olg5us-TextField"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-k94xl1-TextField"
        >
          <div
            className="css-190bw9v-TextField"
          >
            <div>
              <input
                className="css-olg5us-TextField"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and error handling options 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="css-12qr1pz-TextField"
        >
          <div
            className="css-1puw3rw-TextField"
          >
            <div
              className="css-1wk1ksn-TextField"
            >
              <div
                className="css-irhnnw-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1k5aruc-Icon"
                  />
                </span>
              </div>
              <div>
                <input
                  className="css-ytxe85-TextField"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="css-u3om98-Label"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-ms0v9p-TextField"
        >
          <span
            className="css-1gnbc76-Icon"
          >
            <span
              className="css-hnerwf-Icon"
            />
          </span>
          Error in Text Field
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="css-12qr1pz-TextField"
        >
          <div
            className="css-dws6x-TextField"
          >
            <div
              className="css-1wk1ksn-TextField"
            >
              <div
                className="css-irhnnw-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1k5aruc-Icon"
                  />
                </span>
              </div>
              <div>
                <input
                  className="css-ytxe85-TextField"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="css-u3om98-Label"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-ms0v9p-TextField"
        >
          <span
            className="css-1gnbc76-Icon"
          >
            <span
              className="css-hnerwf-Icon"
            />
          </span>
          Error in Text Field
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="css-12qr1pz-TextField"
        >
          <div
            className="css-1gb6qms-TextField"
          >
            <div
              className="css-1wk1ksn-TextField"
            >
              <div
                className="css-irhnnw-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1k5aruc-Icon"
                  />
                </span>
              </div>
              <div>
                <input
                  className="css-ytxe85-TextField"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="css-u3om98-Label"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-ms0v9p-TextField"
        >
          <span
            className="css-1gnbc76-Icon"
          >
            <span
              className="css-hnerwf-Icon"
            />
          </span>
          Error in Text Field
        </div>
      </div>
    </div>
  </div>
</div>
`;
